Add MQTT integration method for generating TLS cert.
