# swagger/as/external/api/application.swagger.json
@@ -464,6 +464,33 @@
         ]
       }
     },
+    "/api/applications/{application_id}/integrations/mqtt/certificate": {
+      "post": {
+        "summary": "CreateMQTTIntegrationCertificate creates an application ID specific TLS certificate\nto connect to the MQTT broker.",
+        "operationId": "CreateMQTTIntegrationCertificate",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiCreateMQTTIntegrationCertificateResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "application_id",
+            "description": "Application ID.",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "ApplicationService"
+        ]
+      }
+    },
     "/api/applications/{application_id}/integrations/mydevices": {
       "get": {
         "summary": "GetMyDevicesIntegration returns the MyDevices application-integration.",
@@ -1481,6 +1508,31 @@
         }
       }
     },
+    "apiCreateMQTTIntegrationCertificateResponse": {
+      "type": "object",
+      "properties": {
+        "tlsCert": {
+          "type": "string",
+          "format": "byte",
+          "description": "TLS certificate."
+        },
+        "tlsKey": {
+          "type": "string",
+          "format": "byte",
+          "description": "TLS key."
+        },
+        "caCert": {
+          "type": "string",
+          "format": "byte",
+          "description": "CA certificate."
+        },
+        "expiresAt": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Expires at defines the expiration date of the certificate."
+        }
+      }
+    },
     "apiCreateMyDevicesIntegrationRequest": {
       "type": "object",
       "properties": {
@@ -1751,7 +1803,8 @@
         "GCP_PUBSUB",
         "AWS_SNS",
         "AZURE_SERVICE_BUS",
-        "PILOT_THINGS"
+        "PILOT_THINGS",
+        "MQTT"
       ],
       "default": "HTTP"
     },
